# SGI_STL

./: ReadMe.md
C_Prog_Lg/chp4/: CMakeLists.txt  ReadMe.md  calc.c  calc.h  getch.c  getop.c  read_txt.c  read_txt.h  stack.c  str_pattern.c
EffectiveC++/: CMakeLists.txt  ReadMe.md  a.out  item0.c  item0.i  item0.s  item0_inc.h  item11.cpp  item2.cpp  item25.cpp  item25_class_tmpl.cpp  item26.cpp  item3.cpp  item30.cpp  item30.cpp.003t.original  item30.cpp.003t.original0  item30.h  item31.cpp  item33.cpp  item33_private_inheritance.cpp  item33_using.cpp  item35_fpointer.cpp  item35_functional.cpp  item35_nvi.cpp  item35_strategy.cpp  item36.cpp  item37.cpp  item38.cpp  item39.cpp  item39_ebo_with_priv_inheritance.cpp  item42.cpp  item42_keyword_template.cpp  item43.cpp  item44.cpp  item45.cpp  item45_shared_ptr.cpp  item46.cpp  item48.cpp  item49.cpp  item6.cpp  (+6 more)
EffectiveSTL/: ReadMe.md
InsideC++ObjectModel/chp1/: 1_cpp_model.cpp  2_keyword.c  CMakeLists.txt  ReadMe.md
InsideC++ObjectModel/chp2/: 1_default_constructor.cpp  1_default_constructor_virtual_base_class.cpp  1_default_constructor_with_virtualfun.cpp  1_polymorphism_eg1.cpp  1_test_vpointer.cpp  1_virtual_override.cpp  2_copy_constructor.cpp  4_mem_ini_list.cpp  CMakeLists.txt  ReadMe.md
InsideC++ObjectModel/chp3/: 1_data_mem_binding.cpp  1_memory_layout.cpp  2_data_mem_layout.cpp  CMakeLists.txt  ReadMe.md
InsideC++ObjectModel/chp4/: 1_three_types_mem_fun.cpp  CMakeLists.txt  ReadMe.md
InsideC++ObjectModel/chp5/: 1_pure_virtual_func.cpp  CMakeLists.txt  ReadMe.md
MoreEffectiveC++/: ReadMe.md
MyEigen/: CMakeLists.txt  alignment.c  func_param.cpp  impl.cpp  keyword_template.cpp  test.cpp  test.i
MyEigen/src/: Constants.h  Core.h  ForwardDeclarations.h  Macros.h  Matrix.h  MatrixBase.h  MatrixStorage.h  Memory.h  NumTraits.h  XprHelper.h
STLSource/chp1/: 8incre_decre_deref.cpp  CMakeLists.txt
STLSource/chp3/: 1auto_ptr.cpp  3traits.cpp  CMakeLists.txt  main
STLSource/chp4/: 3param_pack.cpp  CMakeLists.txt  ReadMe.md  my_copy.cpp  my_deque.cpp  my_heap.cpp  my_queue.cpp  my_stack.cpp  std_copy.cpp  std_priority_queue.cpp  std_stack.cpp
STLSource/chp4/include/: m_deque.h  m_heap.h  m_list.h  m_memory.h  m_queue.h
STLSource/chp5/: std_hashtable.cpp  std_set.cpp  std_unordered_set.cpp
STLSource/chp5/include/: m_hash_set.h  m_hashtable.h  m_iterator_base_funcs.h  m_vector.h
STLSource/chp6/include/: m_hash_fun.h  m_ops.h
STLSource/chp8/: 3_mem_fun_adapters.cpp  CMakeLists.txt
STL_SOURCE_DIVE_IN/chp1/: 1static_template_member.cpp  2partial_specialization.cpp  3function_tmpl_partial.cpp  5limited_default_tmpl.cpp  6nontype_tmpl_param.cpp  7unnamed_obj.cpp
STL_SOURCE_DIVE_IN/chp2/: 3new_handler_crtp.cpp
STL_SOURCE_DIVE_IN/chp3/: 2my_list.cpp  debug_new.cpp  debug_new.h  m_algo.h  m_alloc.h  m_iterator_base_funcs.h  memleak_det.cpp  smart_pointer.cpp
STL_SOURCE_DIVE_IN/chp4/: 4new_delete.cpp  5uninitialized_fill_type_traits.cpp  ReadMe.md  my_heap.cpp  my_macros.cpp  my_priority_queue.cpp  std_heap.cpp  std_queue.cpp  std_vector.cpp
STL_SOURCE_DIVE_IN/chp4/include/: m_construct.h  m_function.h  m_iterator_base_funcs.h  m_queue.h  m_uninitialized.h
STL_SOURCE_DIVE_IN/chp5/: my_hash_set.cpp  my_vector.cpp  std_hash_set.cpp
STL_SOURCE_DIVE_IN/chp5/include/: m_config.h  m_construct.h  m_def.h  m_heap.h  m_pair.h  m_type_traits.h
STL_SOURCE_DIVE_IN/chp6/: std_numeric.cpp
STL_SOURCE_DIVE_IN/chp6/include/: m_algo.h  m_algobase.h  m_function.h  m_uninitialized.h
STL_SOURCE_DIVE_IN/chp8/: 1_iterator_adapters.cpp  2_functor_adapters.cpp  mem_fun.h
chp1/: 4member_tmpl.cpp  9exp_specialization.cpp  CMakeLists.txt
chp2/: 1placement_new.cpp  2new_handler.cpp  CMakeLists.txt  ReadMe.md
chp3/: 1auto_ptr.cpp  2my_list.cpp  4move.cpp  5shared_ptr.cpp  CMakeLists.txt  ReadMe.md  m_iterator.h  m_list.h
chp4/: 1temp_bool.cpp  2temp_arg_deduct.cpp  CMakeLists.txt  ReadMe.md  m_algo.h  m_algobase.h  m_alloc.h  m_construct.h  m_deque.h  m_iterator_base_funcs.h  m_iterator_base_types.h  m_uninitialized.h  m_vector.h  my_deque.cpp  my_list.cpp  my_memory.cpp  my_queue.cpp  my_stdarg.c  my_union.cpp  my_vector.cpp  std_copy.cpp  std_copy_backward.cpp  std_deque.cpp  std_list.cpp  std_memory.cpp  std_vector.cpp
chp4/include/: m_deque.h  m_iterator_base_types.h  m_priority_queue.h  m_vector.h
chp5/: CMakeLists.txt  ReadMe.md  my_hashtable.cpp  std_set.cpp
chp5/include/: m_algo.h  m_stack.h  m_vector.h
chp6/: CMakeLists.txt  ReadMe.md
chp6/include/: m_move.h
chp7/: ReadMe.md
chp8/: ReadMe.md
