cmake_minimum_required(VERSION 3.1)

project(EffectiveC++)

add_executable(item2 item2.cpp)
# add_executable(item3 item3.cpp)
# add_executable(item6 item6.cpp)
# add_executable(item8 item8.cpp)
# add_executable(item9 item9.cpp)
# add_executable(item11 item11.cpp)
# add_executable(item25 item25.cpp)
# add_executable(item25_clstm item25_class_tmpl.cpp)
# add_executable(item30 item30.cpp)
# add_executable(item31 item31.cpp)
# add_executable(item33 item33.cpp)
# add_executable(item33 item33_using.cpp)
# add_executable(item33 item33_private_inheritance.cpp)
add_executable(item35 item35.cpp)
# add_executable(main test.cpp)
# target_link_libraries( -fsanitize=address)
