cmake_minimum_required(VERSION 3.1)

project(EffectiveC++)

add_executable(item2 item2.cpp)
# add_executable(item3 item3.cpp)
# add_executable(item6 item6.cpp)
# add_executable(item7 item7.cpp)
# add_executable(item8 item8.cpp)
# add_executable(item9 item9.cpp)
# add_executable(item11 item11.cpp)
# add_executable(item25 item25.cpp)
# add_executable(item25_clstm item25_class_tmpl.cpp)
# add_executable(item30 item30.cpp)
# add_executable(item31 item31.cpp)
# add_executable(item33 item33.cpp)
# add_executable(item33 item33_using.cpp)
# add_executable(item33 item33_private_inheritance.cpp)
# add_executable(item35 item35_nvi.cpp)
# add_executable(item35 item35_fpointer.cpp)
# add_executable(item35 item35_functional.cpp)
# add_executable(item35 item35_strategy.cpp)
# add_executable(item36 item36.cpp)
# add_executable(item37 item37.cpp)
# add_executable(item38 item38.cpp)
# add_executable(item39 item39.cpp)
# add_executable(item39 item39_ebo_with_priv_inheritance.cpp)
# add_executable(item42 item42.cpp)
# add_executable(item42 item42_keyword_template.cpp)
# add_executable(item43 item43.cpp)
# add_executable(item44 item44.cpp)
# add_executable(item45 item45.cpp)
# add_executable(item45 item45_shared_ptr.cpp)
# target_link_libraries(item45 -fsanitize=address)

add_executable(item46 item46.cpp)
# add_executable(main test.cpp)
# target_link_libraries( -fsanitize=address)
