cmake_minimum_required(VERSION 3.1)
project(associative_container)

include_directories(./include/)


# add_executable(main std_set.cpp)
# add_executable(main my_vector.cpp)
# add_executable(main my_hashtable.cpp)
# add_executable(main std_hashtable.cpp)
add_executable(main my_hash_set.cpp)
# add_executable(main std_hash_set.cpp)
# add_executable(main std_unordered_set.cpp)