cmake_minimum_required(VERSION 3.1)

project(chp1)
# add_executable(main 1_default_constructor.cpp)
# add_executable(main 1_default_constructor_with_virtualfun.cpp)
add_executable(main 1_default_constructor_virtual_base_class.cpp)
# add_executable(main 1_virtual_override.cpp)
# add_executable(main 1_polymorphism_eg1.cpp)
# add_executable(main 1_test_vpointer.cpp)